upload profile Autoit changes

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a863b6">  <td>20/09/29 19:04:43</td>   <td>0</td> <td title="&lt;&lt;XeroBaseClass.CloseBrowser()[pri:0, instance:com.Xero.TestCases.signUpTest@536aaa8d]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="a863b6">  <td>20/09/30 23:56:07</td>   <td>0</td> <td title="&lt;&lt;XeroBaseClass.CloseBrowser()[pri:0, instance:com.Xero.TestCases.uploadUserProfileImageTest@536aaa8d]">&lt;&lt;CloseBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:21</td>   <td>-21579</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;signUpTest.freeDemo()[pri:0, instance:com.Xero.TestCases.signUpTest@536aaa8d]">&gt;&gt;freeDemo</td> 
+<tr bgcolor="a863b6">  <td>20/09/30 23:55:39</td>   <td>-27999</td> <td title="&gt;&gt;XeroBaseClass.launchBrowser()[pri:0, instance:com.Xero.TestCases.uploadUserProfileImageTest@536aaa8d]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1613255205</td>   <td></td> </tr>
+<tr bgcolor="727982">  <td>20/09/30 23:55:50</td>   <td>-16869</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;uploadUserProfileImageTest.loginTabClick()[pri:0, instance:com.Xero.TestCases.uploadUserProfileImageTest@536aaa8d]">&gt;&gt;loginTabClick</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/09/29 19:04:11</td>   <td>-32123</td> <td title="&gt;&gt;XeroBaseClass.launchBrowser()[pri:0, instance:com.Xero.TestCases.signUpTest@536aaa8d]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:22</td>   <td>-20367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="signUpTest.signupTestID02A()[pri:1, instance:com.Xero.TestCases.signUpTest@536aaa8d]">signupTestID02A</td> 
-  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:28</td>   <td>-14445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="signUpTest.signupTestID02B()[pri:2, instance:com.Xero.TestCases.signUpTest@536aaa8d]">signupTestID02B</td> 
-  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:32</td>   <td>-10988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="signUpTest.signupTestID02C()[pri:3, instance:com.Xero.TestCases.signUpTest@536aaa8d]">signupTestID02C</td> 
-  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:37</td>   <td>-5446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="signUpTest.signupTestID02D()[pri:4, instance:com.Xero.TestCases.signUpTest@536aaa8d]">signupTestID02D</td> 
-  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:40</td>   <td>-2303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="signUpTest.signupTestID02E()[pri:5, instance:com.Xero.TestCases.signUpTest@536aaa8d]">signupTestID02E</td> 
-  <td>main@1613255205</td>   <td></td> </tr>
-<tr bgcolor="727982">  <td>20/09/29 19:04:21</td>   <td>-21643</td> <td>&nbsp;</td><td title="&gt;&gt;signUpTest.triggerDependency()[pri:0, instance:com.Xero.TestCases.signUpTest@536aaa8d]">&gt;&gt;triggerDependency</td> 
+<tr bgcolor="727982">  <td>20/09/30 23:55:50</td>   <td>-16920</td> <td>&nbsp;</td><td title="&gt;&gt;uploadUserProfileImageTest.triggerDependency()[pri:0, instance:com.Xero.TestCases.uploadUserProfileImageTest@536aaa8d]">&gt;&gt;triggerDependency</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1613255205</td>   <td></td> </tr>
+<tr bgcolor="727982">  <td>20/09/30 23:55:59</td>   <td>-8776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="uploadUserProfileImageTest.uplaodImage()[pri:0, instance:com.Xero.TestCases.uploadUserProfileImageTest@536aaa8d]">uplaodImage</td> 
+  <td>main@1613255205</td>   <td></td> </tr>
 </table>
