--- a/ExtentReports/sampleReportBrowser.html
+++ b/ExtentReports/sampleReportBrowser.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-09-29 19:04:44</span>
+					<span class='suite-started-time'>2020-09-30 23:56:08</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 33s+388ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 28s+189ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 33s+388ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 28s+189ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-09-29 19:04:11</span> 
+							<span class='panel-lead suite-started-time'>2020-09-30 23:55:39</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-09-29 19:04:44</span> 
+							<span class='panel-lead suite-ended-time'>2020-09-30 23:56:08</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='1c175298-b300-4115-bbd8-403b2e9f5864'>
+										<li class='collection-item test displayed active pass ' extentid='84d5981f-ee65-415a-b65c-fa91e3ee8e2a'>
 											<div class='test-head'>
-												<span class='test-name'>SignUp TestID02A </span>
+												<span class='test-name'>Profile Image Test Start From Login </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-29 19:04:22</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-29 19:04:28</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 5s+490ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-30 23:55:59</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-30 23:56:07</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 8s+379ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,206 +264,18 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:28</td>
-																	<td class='step-details'>Sign Up Demo TestID02A</td>
+																	<td class='timestamp'>23:56:07</td>
+																	<td class='step-details'>Profile Image Click Successful</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:28</td>
-																	<td class='step-details'>Sign Up Fields Pass</td>
+																	<td class='timestamp'>23:56:07</td>
+																	<td class='step-details'>Logout User Click Test is passed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>19:04:28</td>
-																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02A_.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02A_.png' /></a></td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='06ae3777-2bb4-4dc0-832a-4182a52d14c6'>
-											<div class='test-head'>
-												<span class='test-name'>SignUp TestID02B </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-29 19:04:28</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-29 19:04:31</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+92ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:31</td>
-																	<td class='step-details'>Sign Up Demo TestID02B</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:32</td>
-																	<td class='step-details'>Error Message as we left fields empty</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>19:04:32</td>
-																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02B_.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02B_.png' /></a></td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='407c36cf-672e-42a3-bb6a-03f2e9385b49'>
-											<div class='test-head'>
-												<span class='test-name'>SignUp TestID02C </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-29 19:04:32</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-29 19:04:37</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+968ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:37</td>
-																	<td class='step-details'>Sign Up Demo TestID02C</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:37</td>
-																	<td class='step-details'>Terms and Privacy is Sucess</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>19:04:37</td>
-																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02C_.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02C_.png' /></a></td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='38759b9f-8db6-407e-a927-aff062f9797f'>
-											<div class='test-head'>
-												<span class='test-name'>SignUp TestID02D </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-29 19:04:37</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-29 19:04:40</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 2s+562ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:40</td>
-																	<td class='step-details'>Sign Up Demo TestID02D</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:40</td>
-																	<td class='step-details'>Offer Details is Sucess</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>19:04:40</td>
-																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02D_.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02D_.png' /></a></td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='5fae8c27-b375-4bc3-b76c-e0e827a6aa90'>
-											<div class='test-head'>
-												<span class='test-name'>SignUp TestID02E </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-09-29 19:04:40</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-09-29 19:04:42</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+808ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:42</td>
-																	<td class='step-details'>Sign Up Demo TestID02E</td>
-																</tr>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>19:04:43</td>
-																	<td class='step-details'>Accountant and BookKeeper is Sucess</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>19:04:43</td>
-																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02E_.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_SignUpFreeDemo_TestID02E_.png' /></a></td>
+																	<td class='timestamp'>23:56:07</td>
+																	<td class='step-details'><a href='D:\workspace\XeroPageObjectModel//screenshot/sreenshot_UserImage.png' data-featherlight='image'><img class='report-img' src='file:///D:\workspace\XeroPageObjectModel//screenshot/sreenshot_UserImage.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
