--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\gsshy\AppData\Local\Temp\testng-eclipse--14599322\testng-customsuite.xml</span>
+                    <span>C:\Users\gsshy\AppData\Local\Temp\testng-eclipse-295772998\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.signUpTest" hash-for-method="signupTestID02A">signupTestID02A</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.signUpTest" hash-for-method="signupTestID02B">signupTestID02B</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.signUpTest" hash-for-method="signupTestID02C">signupTestID02C</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.signUpTest" hash-for-method="signupTestID02D">signupTestID02D</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.signUpTest" hash-for-method="signupTestID02E">signupTestID02E</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.Xero.TestCases.uploadUserProfileImageTest" hash-for-method="uplaodImage">uplaodImage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.Xero.TestCases.signUpTest</span>
+              <span class="class-name">com.Xero.TestCases.uploadUserProfileImageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="signupTestID02A">
-                  </a> <!-- signupTestID02A -->
-                  <span class="method-name">signupTestID02A</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signupTestID02B">
-                  </a> <!-- signupTestID02B -->
-                  <span class="method-name">signupTestID02B</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signupTestID02C">
-                  </a> <!-- signupTestID02C -->
-                  <span class="method-name">signupTestID02C</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signupTestID02D">
-                  </a> <!-- signupTestID02D -->
-                  <span class="method-name">signupTestID02D</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="signupTestID02E">
-                  </a> <!-- signupTestID02E -->
-                  <span class="method-name">signupTestID02E</span>
+                  <a name="uplaodImage">
+                  </a> <!-- uplaodImage -->
+                  <span class="method-name">uplaodImage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\gsshy\AppData\Local\Temp\testng-eclipse--14599322\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\gsshy\AppData\Local\Temp\testng-eclipse-295772998\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.Xero.TestCases.signUpTest&quot;/&gt;
+      &lt;class name=&quot;com.Xero.TestCases.uploadUserProfileImageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -234,32 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'signupTestID02A')
-data.setCell(0, 2, 'com.Xero.TestCases.signUpTest')
-data.setCell(0, 3, 5918);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'signupTestID02C')
-data.setCell(1, 2, 'com.Xero.TestCases.signUpTest')
-data.setCell(1, 3, 5540);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'signupTestID02B')
-data.setCell(2, 2, 'com.Xero.TestCases.signUpTest')
-data.setCell(2, 3, 3456);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'signupTestID02D')
-data.setCell(3, 2, 'com.Xero.TestCases.signUpTest')
-data.setCell(3, 3, 3141);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'signupTestID02E')
-data.setCell(4, 2, 'com.Xero.TestCases.signUpTest')
-data.setCell(4, 3, 2287);
+data.setCell(0, 1, 'uplaodImage')
+data.setCell(0, 2, 'com.Xero.TestCases.uploadUserProfileImageTest')
+data.setCell(0, 3, 8754);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,42 +221,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.Xero.TestCases.signUpTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.Xero.TestCases.uploadUserProfileImageTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">triggerDependency</span>
-                <span class="method-start">10485 ms</span>
+                <span class="method-start">11085 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
-                <span class="method-name">freeDemo</span>
-                <span class="method-start">10548 ms</span>
+                <span class="method-name">loginTabClick</span>
+                <span class="method-start">11135 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">signupTestID02A</span>
-                <span class="method-start">11761 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">signupTestID02B</span>
-                <span class="method-start">17683 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">signupTestID02C</span>
-                <span class="method-start">21140 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">signupTestID02D</span>
-                <span class="method-start">26682 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">signupTestID02E</span>
-                <span class="method-start">29825 ms</span>
+                <span class="method-name">uplaodImage</span>
+                <span class="method-start">19229 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">CloseBrowser</span>
-                <span class="method-start">32128 ms</span>
+                <span class="method-start">28005 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
